examples/error/missing_colon_component.fil
diagram component;

type Database = Rectangle [color="blue"];
type Service = Rectangle [color="green"];

// Valid component definition with colon
frontend: Service;

// This component definition is missing a colon - should trigger parse error
backend Service;

// This line should cause the parser to fail due to missing colon above
database: Database;
